Version 10.3 - xxxx edition. 02 November 2022

* New things added:

Added Machine Amstrad CPC 6128
Added Advanced menu items: now by default, advanced menu items are hidden, you should enable them on Settings->Advanced menu items
Added Visual Floppy to see +3 disk (and CPC6128?) activity
Added Poke F-Function
Added Visual Real Tape F-Function
Added DSK disk info menu: to get tracks and sectors of a disk
Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name (TODO: now F-keys can have parameters, like window name)
Added XEyes "Toy" to follow mouse

* Improvements:

Improved Debug Console: better refresh, dynamic width??
Improved Debug Messages: allow to filter by message class (DSK, PD765, etc...)
Improved Debug CPU:
- switched function keys "m" and "o": now "x" change mode, and "m" change memptr (to be coherent with other similar windows) 
- added (hl), (de), (bc)
- added (nn) when selecting an opcode like: ld reg,(nn) and ld (nn),reg
- added (ix+d), (iy+d) when selecting an opcode like: ld reg,(IX+d), etc
- added continuos speed 4 (run 10 opcodes every time, with no pause)
- show last memory pointer when changing it

Improved View Sprites: sprite is no longer disabled when changing memory pointer

Improved changing pointer on some windows: can use an expression when changing memory pointer on Debug CPU, View Sprites, Hexdump and Disassemble

Improved ZX Desktop:
- Dynamic icons (Trash, My Machine, ...) assigned on top buttons now show dynamic state (trash empty/full, current machine image, etc)
- Show icon indicators for open apps on ZX Desktop
- Added setting to empty Trash on exit

Improved ZX Vision:
- Added windows TaskBar
- Added Process ID (PID) for all windows
- Text input fields now handle repeated keys
- Some text input fields now have history of last items, and history is saved on configuration file
- Added function to maximize all windows
- Allow reducing character height