@@ -921,6 +921,8 @@ index 363164e..23697c6 100644
 
 # Agregar en scripts carpeta tests 
 
+# Entrada en contend.c si conviene
+
 
 -----
 
