@@ -30,7 +30,7 @@ And also:
 * ZX-Evolution TS-Conf
 * ZX Spectrum Next
 * Jupiter Ace
-* Amstrad CPC 464, CPC 4128, CPC 6128
+* Amstrad CPC 464, CPC 4128, CPC 664, CPC 6128
 * MSX1 
 * Spectravideo 318/328
 * Colecovision
