@@ -366,8 +366,8 @@ The Video RAM is always located in the first 64K, VRAM is in no way affected by 
     }
     else {
         //Entra ROM 
-        //en 6128 ver si entra amsdos rom
-        if (MACHINE_IS_CPC_6128 && cpc_port_df==7) {
+        //en 6128 y 664 ver si entra amsdos rom
+        if ((MACHINE_IS_CPC_6128 || MACHINE_IS_CPC_664) && cpc_port_df==7) {
             //Entra AMSDOS
             cpc_memory_paged_read[3]=cpc_rom_mem_table[2];
         }
@@ -402,7 +402,7 @@ void cpc_init_memory_tables()
         cpc_rom_mem_table[1]=puntero;
         puntero +=16384;
 
-        if (MACHINE_IS_CPC_6128) {
+        if (MACHINE_IS_CPC_6128 || MACHINE_IS_CPC_664) {
             cpc_rom_mem_table[2]=puntero;
             puntero +=16384;
         }
