@@ -8705,6 +8705,7 @@ struct s_machine_family machine_family_list[]={
     {MACHINE_ID_Z88,MACHINE_FAMILY_Z88},
     {MACHINE_ID_CPC_464,MACHINE_FAMILY_CPC},
     {MACHINE_ID_CPC_4128,MACHINE_FAMILY_CPC},
+    {MACHINE_ID_CPC_664,MACHINE_FAMILY_CPC},
     {MACHINE_ID_CPC_6128,MACHINE_FAMILY_CPC},
     {MACHINE_ID_QL_STANDARD,MACHINE_FAMILY_QL},
     {MACHINE_ID_MK14_STANDARD,MACHINE_FAMILY_MK14},
